# Agentic-Setup

./: DOCUMENTATION.md  INTEGRATION_TESTING_GUIDE.md  ROADMAP.md  SEM8_PROJECT_REPORT.txt  readme.md
backend/: .env.example  .gitignore  README.md  __init__.py  backend_plan.md  main.py  main_simple.py  plan.md  pyproject.toml  requirements.txt  test_imports.py
backend/agents/: __init__.py  agent_coordinator.py  appointment_agent.py  base_agent.py  clinical.py  clinical_agent.py  hospital.py  knowledge.py  patient_education_agent.py  pdf_agent.py  rehabilitation_agent.py  report.py  treatment_planner_agent.py  vision.py  vision_agent.py
backend/api/: __init__.py  middleware.py  router.py
backend/api/endpoints/: analyze.py  chat.py  dashboard.py  feedback.py  feedback.py.backup  health.py  knowledge.py  metrics.py  multi_agent.py  nearby.py  patients.py  reports.py
backend/api/schemas/: __init__.py  feedback.py  requests.py  responses.py
backend/core/: __init__.py  config.py  exceptions.py  logging.py
backend/graph/: checkpointer.py  graph.py  state.py
backend/graph/nodes/: error_handler.py  response_builder.py  supervisor.py  tool_executor.py
backend/mcp/: registry.py  server.py
backend/ortho_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/services/: __init__.py  agent_learning.py  chat_store.py  groq_llm.py  mongo.py  patient_store.py  probabilistic_reasoning.py  rag_store.py  session.py  storage.py
backend/tests/: test_dicom_utils.py
backend/tools/: __init__.py  utils.py
backend/tools/clinical/: __init__.py  (+5 more)
(+128 files in other folders)
